# GlyphWeave

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.ja.md  README.md  README.zh.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts  wrangler.bevy.jsonc  wrangler.jsonc
.githooks/: pre-commit
bevy/: Cargo.toml
bevy/assets/fonts/: README.md  generate_atlas.py
bevy/crates/app/src/: camera.rs  gameplay.rs  gameplay_demo.rs  input.rs  main.rs  perf.rs  preset.rs  render_sync.rs  resource.rs  scenario.rs  tool.rs  ui.rs  voxel_adapter.rs
bevy/crates/app/src/render/: atlas.rs  tilemap.rs
bevy/crates/cli/: Cargo.toml
bevy/crates/cli/src/: main.rs
bevy/crates/core/: Cargo.toml
bevy/crates/core/src/: chunk.rs  coords.rs  error.rs  gemap.rs  layer.rs  lib.rs  tile.rs  world.rs
bevy/crates/core/src/gameplay/: command.rs  mod.rs  sim.rs  state.rs
bevy/crates/core/src/migration/: mod.rs  v2.rs
bevy/crates/core/src/storage/: archive.rs  bitpack.rs  canonical.rs  codec.rs  mod.rs  model.rs
bevy/crates/core/src/voxel/: chunk.rs  coords.rs  mod.rs  region.rs  registry.rs  world.rs
bevy/web/: index.html
examples/: badlands-wadi.gemap  dragon_island.gemap
schemas/: gemap-v3-manifest.schema.json  gemap-v3-region.schema.json
scripts/: build-bevy-web.sh  canvas-perf-benchmark.mjs  check-bevy-fps.sh  generate-grand-map.mjs  generate-tree.mjs
server/: api-doc.d.mts  api-doc.mjs  api-doc.test.mjs  chat-tools.mjs  chat.d.mts  chat.mjs  gemap-api.d.mts  gemap-api.mjs  gemap-api.test.mjs  (+11 more)
(+143 files in other folders)
